Fixed the position of the toolbar that was overflowing the main containter to the left.

--- a/ckanext/tess/public/workflows-cytoscape.css
+++ b/ckanext/tess/public/workflows-cytoscape.css
@@ -42,7 +42,7 @@ i {
 /* cytoscape graph */
 .cy {
     height: 900px;
-    width: 900px;
+    width: 865px;
     background-color: #f9f9f9;
     right: auto;
 }
